--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-
+    <header class="main-header">
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
+        <span>My Times</span>
+      </div>
+      <nav id="navigation">
+        <span>
+          <a href="#">World</a>
+        </span>
+        <span>
+          <a href="#">U.S.</a>
+        </span>
+        <span>
+          <a href="#">Tech</a>
+        </span>
+        <span>
+          <a href="#">Science</a>
+        </span>
+      </nav>
+    </header>
   </body>
 </html>
